--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CrudDeUsuarios</string>
+    <string name="app_name">Areia e Brita</string>
     <string name="action_settings">Settings</string>
     <string name="login">Login</string>
     <string name="senha">Senha</string>
@@ -8,6 +8,7 @@
     <string name="cliente">Cliente</string>
     <string name="Valor_venda">Valor da venda</string>
     <string-array name="funcao_array">
+        <item>Selecione a função</item>
         <item>Secretaria</item>
         <item>Estoque</item>
     </string-array>
