Refatorando pedido de venda

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="alterar_usuario">Alterar de usuário</string>
     <string name="lista_usuarios">Lista de usuários</string>
     <string name="cadastra_usuarios">Cadastro de usuário</string>
+    <string name="cliente_dois_pontos">Cliente:</string>
     <string-array name="funcao_array">
         <item>Selecione a função</item>
         <item>Secretaria</item>
