--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="alterar_fornecedor">Alterar dados fornecedor</string>
     <string name="cadastra_fornecedor">Cadastrar fornecedor</string>
     <string name="cnpj">CNPJ</string>
+    <string name="fornecedor_dois_pontos">Fornecedor</string>
+    <string name="valor_da_compra">Valor da compra</string>
     <string-array name="funcao_array">
         <item>Selecione a função</item>
         <item>Secretaria</item>
