--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="cnpj">CNPJ</string>
     <string name="fornecedor_dois_pontos">Fornecedor</string>
     <string name="valor_da_compra">Valor da compra</string>
+    <string name="conferencia_de_saida">Conferência de Saída</string>
     <string-array name="funcao_array">
         <item>Selecione a função</item>
         <item>Secretaria</item>
