--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="fornecedor_dois_pontos">Fornecedor</string>
     <string name="valor_da_compra">Valor da compra</string>
     <string name="conferencia_de_saida">Conferência de Saída</string>
+    <string name="cadastra_produto">Cadastra produto</string>
     <string-array name="funcao_array">
         <item>Selecione a função</item>
         <item>Secretaria</item>
